// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semi.js 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module 'foo' {
  function foo(namespace: string): void;
  function bar(namespace: string): void;
}

function pickCard(x: {suit: string; card: number; }[]): number;
function pickCard(x: number): {suit: string; card: number; };

=====================================output=====================================
declare module "foo" {
  function foo(namespace: string): void;
  function bar(namespace: string): void;
}

function pickCard(x: { suit: string; card: number }[]): number;
function pickCard(x: number): { suit: string; card: number };

================================================================================
`;

exports[`type_literal_optional_method.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var v: { e?(): number };

=====================================output=====================================
var v: { e?(): number };

================================================================================
`;
